@@ -47,7 +47,7 @@
 #include <math.h>
 #define RGB(r, g, b)    r*999/255, g*999/255, b*999/255
 
-#define N_INIT_PAIRS      24
+#define N_INIT_PAIRS      25
 
 struct ucolor {
     int fg;
