@@ -114,6 +114,7 @@
 #define GRID_EVEN         21
 #define GRID_ODD          22
 #define HEADINGS_ODD      23
+#define HELP_HIGHLIGHT    24
 
 void ui_sc_msg(char * s, int type, ...);
 #define sc_error(x, ...)     ui_sc_msg(x, ERROR_MSG, ##__VA_ARGS__)
